--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
+    "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.5",
