--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "type": "module",
   "description": "",
   "dependencies": {
+    "@google-analytics/admin": "^9.0.1",
+    "@google-analytics/data": "^5.2.1",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
