fixed auth issue

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "description": "",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.68.0",
     "@google-analytics/admin": "^9.0.1",
     "@google-analytics/data": "^5.2.1",
     "@google/generative-ai": "^0.24.1",
