--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "form-data": "^4.0.4",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
+    "mailgun.js": "^12.1.1",
     "mongoose": "^8.17.1",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
