--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@google-analytics/admin": "^9.0.1",
     "@google-analytics/data": "^5.2.1",
     "@google/generative-ai": "^0.24.1",
-    "axios": "^1.11.0",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
@@ -26,6 +26,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "form-data": "^4.0.4",
+    "geoip-lite": "^1.4.10",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mailgun.js": "^12.1.1",
@@ -40,6 +41,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "redis": "^5.8.0",
-    "response-time": "^2.3.4"
+    "response-time": "^2.3.4",
+    "useragent": "^2.3.0"
   }
 }
