--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
+    "cashfree-pg": "^5.1.0",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
