--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@google-analytics/admin": "^9.0.1",
     "@google-analytics/data": "^5.2.1",
     "@google/generative-ai": "^0.24.1",
-    "axios": "^1.13.2",
+    "axios": "^1.13.4",
     "bcrypt": "^6.0.0",
     "cashfree-pg": "^5.1.0",
     "cloudinary": "^2.7.0",
@@ -44,6 +44,7 @@
     "pdf-lib": "^1.17.1",
     "redis": "^5.8.0",
     "response-time": "^2.3.4",
+    "streamifier": "^0.1.1",
     "ua-parser-js": "^2.0.8",
     "useragent": "^2.3.0",
     "uuid": "^13.0.0"
