--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "pdf-lib": "^1.17.1",
     "redis": "^5.8.0",
     "response-time": "^2.3.4",
+    "slugify": "^1.6.6",
     "streamifier": "^0.1.1",
     "ua-parser-js": "^2.0.8",
     "useragent": "^2.3.0",
